version/0.30/_sources/api/solver/_autosummary/settings/porous_zone.rst.txt
:orphan:

.. _porous_zone:

porous_zone
===========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.porous_zone
    :show-inheritance:

.. rubric:: Attributes

==========================================================================   =====================================================================

Attribute                                                                                                                                  Summary

==========================================================================   =====================================================================
:ref:`porous <porous>`                                                                                                               Porous zone?.

:ref:`dir_spec_cond <dir_spec_cond>`                                                                                      Direction Specification.

:ref:`cursys_name <cursys_name>`                                                                                                Coordinate System.

:ref:`direction_1_vector <direction_1_vector>`                                                                      Direction 1 vector components.

:ref:`direction_2_vector <direction_2_vector>`                                                                      Direction 2 vector components.

:ref:`cone_axis_vector <cone_axis_vector>`                                                                            Cone axis vector components.

:ref:`point_on_cone_axis <point_on_cone_axis>`                                                                      Point on cone axis components.

:ref:`cone_angle <cone_angle>`                                                                            Half Angle of Cone Relative to its Axis.

:ref:`rel_vel_resistance <rel_vel_resistance>`                                                          Relative Velocity Resistance Formulation?.

:ref:`viscous_resistance <viscous_resistance>`                                                                      Viscous resistance components.

:ref:`alt_inertial_form <alt_inertial_form>`                                                     Alternative formulation for inertial resistance?.

:ref:`inertial_resistance <inertial_resistance>`                                                                   Inertial resistance components.

:ref:`power_law_c0 <power_law_c0>`                                                                                             Help not available.

:ref:`power_law_c1 <power_law_c1>`                                                                                             Help not available.

:ref:`porosity <porosity>`                                                                                                               Porosity.

:ref:`relative_viscosity <relative_viscosity>`                                                                                 Relative Viscosity.

:ref:`relative_permeability <relative_permeability_1>`                                                       Enable/disable Relative Permeability.

:ref:`corey <corey>`                                                                                                     Two-Phase Corey's Model?.

:ref:`stone_1 <stone_1>`                                                                                                     Three-Phase Stone-1?.

:ref:`stone_2 <stone_2>`                                                                                                     Three-Phase Stone-2?.

:ref:`rel_perm_limit_p1 <rel_perm_limit_p1>`                                                                        Minimum Relative Permeability.

:ref:`rel_perm_limit_p2 <rel_perm_limit_p2>`                                                                        Minimum Relative Permeability.

:ref:`ref_perm_p1 <ref_perm_p1>`                                                                                  Reference Relative Permeability.

:ref:`exp_p1 <exp_p1>`                                                                                                             Corey Exponent.

:ref:`res_sat_p1 <res_sat_p1>`                                                                                                Residual Saturation.

:ref:`ref_perm_p2 <ref_perm_p2>`                                                                                  Reference Relative Permeability.

:ref:`exp_p2 <exp_p2>`                                                                                                             Corey Exponent.

:ref:`res_sat_p2 <res_sat_p2>`                                                                                                Residual Saturation.

:ref:`ref_perm_p3 <ref_perm_p3>`                                                                                  Reference Relative Permeability.

:ref:`exp_p3 <exp_p3>`                                                                                                             Corey Exponent.

:ref:`res_sat_p3 <res_sat_p3>`                                                                                                Residual Saturation.

:ref:`capillary_pressure <capillary_pressure_1>`                                                                               Capillary Pressure.

:ref:`max_capillary_pressure <max_capillary_pressure>`                                                                 Maximum Capillary Pressure.

:ref:`van_genuchten_pg <van_genuchten_pg>`                                                                                         Entry pressure.

:ref:`van_genuchten_ng <van_genuchten_ng>`                                                                                     Pore size exponent.

:ref:`skjaeveland_nw_pc_coef <skjaeveland_nw_pc_coef>`                                                                             Entry pressure.

:ref:`skjaeveland_nw_pc_pwr <skjaeveland_nw_pc_pwr>`                                                                           Pore size exponent.

:ref:`skjaeveland_wet_pc_coef <skjaeveland_wet_pc_coef>`                                                                           Entry pressure.

:ref:`skjaeveland_wet_pc_pwr <skjaeveland_wet_pc_pwr>`                                                                         Pore size exponent.

:ref:`brooks_corey_pe <brooks_corey_pe>`                                                                                           Entry Pressure.

:ref:`brooks_corey_ng <brooks_corey_ng>`                                                                                       Pore size exponent.

:ref:`leverett_con_ang <leverett_con_ang>`                                                                                          Contact Angle.

:ref:`rp_cbox_p1 <rp_cbox_p1>`                                                                                                 Help not available.

:ref:`rp_edit_p1 <rp_edit_p1>`                                                                                                 Help not available.

:ref:`rel_perm_tabular_p1 <rel_perm_tabular_p1>`                                                                               Help not available.

:ref:`rel_perm_table_p1 <rel_perm_table_p1>`                                                                                   Help not available.

:ref:`rel_perm_satw_p1 <rel_perm_satw_p1>`                                                                                     Help not available.

:ref:`rel_perm_rp_p1 <rel_perm_rp_p1>`                                                                                         Help not available.

:ref:`rp_cbox_p2 <rp_cbox_p2>`                                                                                                 Help not available.

:ref:`rp_edit_p2 <rp_edit_p2>`                                                                                                 Help not available.

:ref:`rel_perm_tabular_p2 <rel_perm_tabular_p2>`                                                                               Help not available.

:ref:`rel_perm_table_p2 <rel_perm_table_p2>`                                                                                   Help not available.

:ref:`rel_perm_satw_p2 <rel_perm_satw_p2>`                                                                                     Help not available.

:ref:`rel_perm_rp_p2 <rel_perm_rp_p2>`                                                                                         Help not available.

:ref:`wetting_phase <wetting_phase>`                                                                                                Wetting Phase.

:ref:`non_wetting_phase <non_wetting_phase>`                                                                                    Non Wetting Phase.

:ref:`equib_thermal <equib_thermal>`                                                          Equilibrium Thermal Model (if no, Non-Equilibrium)?.

:ref:`non_equib_thermal <non_equib_thermal>`                                                                       Non-Equilibrium Thermal Model?.

:ref:`solid_material <solid_material>`                                                                                        Solid Material Name.

:ref:`area_density <area_density>`                                                                                       Interfacial Area Density.

:ref:`heat_transfer_coeff <heat_transfer_coeff>`                                                                        Heat Transfer Coefficient.

:ref:`porous_structure <porous_structure>`                                                                                      Porous Structure?.

:ref:`structure_material <structure_material>`                                                                            Structure Material Name.

:ref:`anisotropic_spe_diff <anisotropic_spe_diff>`                                                                 Anisotropic Species Diffusion?.

:ref:`spe_diff_xx <spe_diff_xx>`                                                                                  XX diffusion matrix coefficient.

:ref:`spe_diff_xy <spe_diff_xy>`                                                                                  XY diffusion matrix coefficient.

:ref:`spe_diff_xz <spe_diff_xz>`                                                                                  XZ diffusion matrix coefficient.

:ref:`spe_diff_yx <spe_diff_yx>`                                                                                  YX diffusion matrix coefficient.

:ref:`spe_diff_yy <spe_diff_yy>`                                                                                  YY diffusion matrix coefficient.

:ref:`spe_diff_yz <spe_diff_yz>`                                                                                  YZ diffusion matrix coefficient.

:ref:`spe_diff_zx <spe_diff_zx>`                                                                                  ZX diffusion matrix coefficient.

:ref:`spe_diff_zy <spe_diff_zy>`                                                                                  ZY diffusion matrix coefficient.

:ref:`spe_diff_zz <spe_diff_zz>`                                                                                  ZZ diffusion matrix coefficient.

:ref:`wall_treatment <wall_treatment_1>`                                                        Enable wall treatment at porous fluid interfaces?.

:ref:`rad_porous_wall <rad_porous_wall>`                                         Enable (opaque) radiation wall model for porous-fluid interface?.

:ref:`rad_porous_wall_in_emiss <rad_porous_wall_in_emiss>`                                                                    Internal Emissivity.

:ref:`rad_porous_wall_diffuse_fraction <rad_porous_wall_diffuse_fraction>`                                                       Diffuse Fraction.

==========================================================================   =====================================================================

.. rubric:: Included in:

======================================   ======================================

Parent                                                                  Summary

======================================   ======================================
:ref:`fluid_1_child <fluid_1_child>`              'child_object_type' of fluid.

:ref:`phase_child <phase_child>`                  'child_object_type' of phase.

:ref:`settings_4 <settings_4>`               Domain name to define settings on.

:ref:`phase_27_child <phase_27_child>`            'child_object_type' of phase.

======================================   ======================================

